-Added in a project UML diagram -Renames a few variables in the classes so their purpose was clearer -also added in a customer support fxml file I am going to build out - And there is also a new folder called documentation where we will put all the diagrams we need for the project